--- a/package.json
+++ b/package.json
@@ -15,15 +15,18 @@
 	"author": "Darvesh",
 	"license": "GPL-3.0 License",
 	"dependencies": {
-		"axios": "^0.19.2",
-		"nedb-promises": "^4.0.4",
+		"better-sqlite3": "^7.1.1",
 		"ramda": "^0.27.0",
-		"telegraf": "^3.38.0"
+		"reflect-metadata": "^0.1.13",
+		"sanctuary": "^3.1.0",
+		"telegraf": "^3.38.0",
+		"typeorm": "^0.2.28"
 	},
 	"devDependencies": {
 		"@types/axios": "^0.14.0",
 		"@types/node": "^14.6.2",
 		"@types/ramda": "^0.27.11",
+		"@types/sanctuary": "^3.0.3",
 		"@typescript-eslint/eslint-plugin": "^3.6.1",
 		"@typescript-eslint/parser": "^3.6.1",
 		"eslint": "^7.4.0",
