--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,15 +10,11 @@
 		"resolveJsonModule": true,
 		"esModuleInterop": true,
 		"target": "ES2019",
-		"lib": [
-			"ES2020"
-		]
+		"emitDecoratorMetadata": true,
+		"experimentalDecorators": true,
+		"strictPropertyInitialization": false,
+		"lib": ["ES2020"]
 	},
-	"include": [
-		"src/**/*"
-	],
-	"exclude": [
-		"node_modules",
-		"**/*.spec.ts"
-	]
+	"include": ["src/**/*"],
+	"exclude": ["node_modules", "**/*.spec.ts"]
 }
