--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 	"license": "GPL-3.0 License",
 	"dependencies": {
 		"better-sqlite3": "^7.1.1",
+		"dayjs": "^1.9.1",
 		"ramda": "^0.27.0",
 		"reflect-metadata": "^0.1.13",
 		"sanctuary": "^3.1.0",
