--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -27,6 +27,7 @@
 	"rules": {
 		"@typescript-eslint/explicit-module-boundary-types": "off",
 		"@typescript-eslint/no-unsafe-member-access": "off",
-		"no-irregular-whitespace": "off"
+		"no-irregular-whitespace": "off",
+		"@typescript-eslint/no-floating-promises": "off"
 	}
 }
